--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@ body {
 }
 
 .fab {
-  font-size: 36px;
+  /*font-size: 36px;*/
   font-weight: 700;
   font-weight: 100;
   line-height: 1.3;
@@ -40,15 +40,16 @@ body {
   z-index: 9;
   right: 20px;
   bottom: 20px;
-  width: 48px;
-  height: 48px;
+  width: 50px!important;
+  height: 50px!important;
+  padding: 0;
   cursor: pointer;
   text-align: center;
   color: white;
+  border-bottom: solid 4px rgba(0, 0, 0, .2);
   border-radius: 50%;
   background: #ff4081;
-  border-bottom: solid 4px rgba(0,0,0,.2);
-  box-shadow: 0 2px 10px rgba(0, 0, 0, .2);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, .4);
 }
 
 .nav-modal {
