--- a/css/styles.css
+++ b/css/styles.css
@@ -272,24 +272,11 @@ body {
   width: calc(100% - 255px);
 }
 
-#do_drag_search_open {}
-#do_drag_search_close {
+#do_drag_search_open {
   position: absolute;
+  z-index: 100;
+  top: 50px;
   bottom: 0;
-  left: 0;
   right: 0;
-  height: 25px;
-  width: 100%;
-  display: table;
-  background-color: rgba(200,200,200,.3);
-}
-#do_drag_search_close:before{
-  content: '⏏';
-  display: table-cell;
-  vertical-align: middle;
-  text-align: center;
-  width: 100%;
-  height: 100%;
-  color: #ffffff;
-  font-size: 20px;
+  width: 15px;
 }
