--- a/css/styles.css
+++ b/css/styles.css
@@ -332,3 +332,15 @@ body {
   right: 0;
   z-index: 10;
 }
+
+.profileImg {
+  border-radius: 100px;
+  width: 50px;
+  height: 50px;
+  margin: 0 auto;
+  background-color: rgba(0,0,0,.1);
+}
+
+.bordered {
+  border: solid 1px rgba(0,0,0,.1);
+}
