--- a/css/helpers.css
+++ b/css/helpers.css
@@ -1,4 +1,5 @@
-@import url(http://fonts.googleapis.com/css?family=Roboto:400,300);
+/*@import "url(http://fonts.googleapis.com/css?family=Roboto:400,300)";*/
+/*@import "url('https://fonts.googleapis.com/css?family=Monda:400,700')";*/
 html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,
 sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,
 header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video {
@@ -11,6 +12,9 @@ article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section { 
 body {
   display: block;
   margin: 0;
+  font-family: 'Monda', sans-serif;
+  font-weight: 400;
+  font-size: 13px;
 }
 hr{
   display: block;
@@ -51,7 +55,7 @@ body *:after, .wrapper *:after, .z-container *:after, .z-container-fluid *:after
   border-bottom: 4px solid rgba(0, 0, 0, .2);
   cursor: pointer;
   border-radius: 0!important;
-  padding: 10px!important;
+  padding: 10px;
   /*min-width: 150px;*/
   width: 100%;
   outline: none!important;
@@ -173,8 +177,17 @@ font-size: 20px;
 .bgDarkGreyClear { background-color: rgba(113, 113, 113, .5)!important; }
 .bgOrangeClear { background-color: rgba(255, 141, 0, .5)!important; }
 .hFull { height: 100%; }
-.w80 { width: 80%; }
-.h0  {height: 0px } .hAuto{ height: auto; }
+.h10vh { height: 10vh; } .h20vh { height: 20vh; }
+.h30vh { height: 30vh; } .h40vh { height: 40vh; }
+.h50vh { height: 50vh; } .h60vh { height: 60vh; }
+.h70vh { height: 70vh; } .h80vh { height: 80vh; }
+.h90vh { height: 90vh; } .h100vh { height: 100vh; }
+.w10vw { width: 10vw; } .w20vw { width: 20vw; }
+.w30vw { width: 30vw; } .w40vw { width: 40vw; }
+.w50vw { width: 50vw; } .w60vw { width: 60vw; }
+.w70vw { width: 70vw; } .w80vw { width: 80vw; }
+.w90vw { width: 90vw; } .w100vw { width: 100vw; }
+.h0  {height: 0px; } .hAuto{ height: auto; }
 .h20 { height: 20px; }.h25 { height: 25px; }
 .h30 { height: 30px; }.h35 { height: 35px; }
 .h40 { height: 40px; }.h45 { height: 45px; }
@@ -959,7 +972,7 @@ body:after,
 }
 .hidden { display: none!important; visibility: hidden!important; }
 .visible { display: block!important; visibility: visible; }
-.form-section { width: 100%; }
+.form-section { width: 100%; position: relative; }
 .form-control {
   font-size: 15px;
   display: block;
