--- a/app/css/custom.css
+++ b/app/css/custom.css
@@ -370,6 +370,7 @@ p {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  height: 100vh;
 }
 .bgCover {
   position: absolute;
