--- a/css/helpers.css
+++ b/css/helpers.css
@@ -187,6 +187,7 @@ font-size: 20px;
 .w50vw { width: 50vw; } .w60vw { width: 60vw; }
 .w70vw { width: 70vw; } .w80vw { width: 80vw; }
 .w90vw { width: 90vw; } .w100vw { width: 100vw; }
+.h100vw { height: 100vw; }
 .h0  {height: 0px; } .hAuto{ height: auto; }
 .h20 { height: 20px; }.h25 { height: 25px; }
 .h30 { height: 30px; }.h35 { height: 35px; }
