sin facebook y con lo mas actual de la app

--- a/app/css/custom.css
+++ b/app/css/custom.css
@@ -424,12 +424,12 @@ a.searchDay {
 /* main header */
 .menu-app{
   display: -ms-flex !important;
-    display: -webkit-flex !important;
-    display: flex !important;
-    flex-wrap: wrap;
-    flex-direction: row;
-    align-content: stretch;
-    align-items: center;
+  display: -webkit-flex !important;
+  display: flex !important;
+  flex-wrap: wrap;
+  flex-direction: row;
+  align-content: stretch;
+  align-items: center;
 }
 
 .ui-header-fixed,.ui-header-fixed.ui-fixed-hidden{
@@ -485,4 +485,145 @@ a.searchDay {
   background: #ECECEC;
   opacity: 0.9;
   display: none;
+}
+
+/*  fab icon */
+.fab-container {
+  margin: 1em;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+}
+.fab-container:hover .buttons:not(:last-of-type) {
+  width: 40px;
+  height: 40px;
+  margin: 15px auto 0;
+  opacity: 1;
+}
+.fab-container:hover .rotate:before {
+  transform: rotate(0deg);
+}
+
+.fab-container .buttons {
+  display: block;
+  width: 35px;
+  height: 35px;
+  margin: 20px auto 0;
+  text-decoration: none;
+  position: relative;
+  border-radius: 50%;
+  box-shadow: 0px 5px 11px -2px rgba(0, 0, 0, 0.18), 0px 4px 12px -7px rgba(0, 0, 0, 0.15);
+  opacity: 0;
+  transition: .2s;
+}
+.fab-container .buttons:nth-last-of-type(2) {
+  transition-delay: 20ms;
+}
+.fab-container .buttons:nth-last-of-type(3) {
+  transition-delay: 40ms;
+}
+.fab-container .buttons:nth-last-of-type(4) {
+  transition-delay: 60ms;
+}
+.fab-container .buttons:nth-last-of-type(5) {
+  transition-delay: 80ms;
+}
+.fab-container .buttons:nth-last-of-type(6) {
+  transition-delay: 100ms;
+}
+.fab-container .buttons:nth-last-of-type(1) {
+  width: 56px;
+  height: 56px;
+  opacity: 1;
+}
+.fab-container .buttons:nth-last-of-type(2) {
+  background: #D2A518 url("http://goo.gl/XVUbvp") center no-repeat;
+}
+.fab-container .buttons:nth-last-of-type(3) {
+  background: #3C80F6 url("https://goo.gl/xdZJHE") center no-repeat;
+}
+.fab-container .buttons:nth-last-of-type(4) {
+  background-image: url("https://goo.gl/OEKh8Y");
+  background-size: contain;
+}
+.fab-container .buttons:nth-last-of-type(5) {
+  background-image: url("https://goo.gl/SrERjY");
+  background-size: contain;
+}
+.fab-container .buttons:nth-last-of-type(6) {
+  background-image: url("http://goo.gl/c5kspt");
+  background-size: contain;
+}
+.fab-container .buttons:hover {
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28);
+}
+
+.fab-container span {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+
+.fab-container span.rotate {
+  background: #0099cc;
+  position: absolute;
+  transition: .3s;
+  text-align: center;
+  padding: 25%;
+  color: #fff;
+}
+
+.fab-container [tooltip]:before {
+  content: attr(tooltip);
+  background: #585858;
+  padding: 5px 7px;
+  margin-right: 10px;
+  border-radius: 2px;
+  color: #FFF;
+  font: 500 12px Roboto;
+  white-space: nowrap;
+  position: absolute;
+  bottom: 20%;
+  right: 100%;
+  visibility: hidden;
+  opacity: 0;
+  transition: .3s;
+}
+.fab-container [tooltip]:hover:before {
+  visibility: visible;
+  opacity: 1;
+}
+.card-negocio {
+  padding: 0 0 10px 0;
+}
+a.negocio-link{
+  color: #Fff;
+  padding: 10px 0px;
+  line-height: 32px;
+}
+.descripcion-negocio{
+  color: #Fff;
+}
+.flex-negocio {
+  display: flex;
+  flex-wrap: wrap;
+  background: rgba(0, 0, 0, 0.77);
+  padding: 2px 0;
+  box-shadow: 0px 1px 7px black;
+  border-radius: 2px;
+}
+
+.flex-negocio .div-flex-negocio {
+  display: flex;
+}
+
+.image-swap {
+  padding-bottom: 100%;
+  width: 100%;
+  background-size: cover;
+  background-position: center center;
+}
+
+a.product-content-image {
+  width: 100%;
 }
