--- a/app/css/custom.css
+++ b/app/css/custom.css
@@ -484,6 +484,9 @@ a.searchDay {
   width: 100%;
   padding-bottom: 100%;
 }
+#filterPublicaciones li {
+  display: block;
+}
 
 /*float searh*/
 .fab {
