nuevo orden de tareas 7/7 tareas completadas

--- a/app/css/custom.css
+++ b/app/css/custom.css
@@ -716,10 +716,13 @@ a.product-content-image {
   padding-bottom: 80%;
 }
 /* perfil */
-#PromocionesPorSocio .z-panelHeader{
-  display: none;
-}
+
 #PromocionesPorSocio {
   margin: 0 -1em;
   padding: .5em 1em;
+}
+.divisionDiaPerfil {
+    padding: 1em;
+    color: #fff;
+    background-color: rgba(50, 50, 50, .5)!important;
 }
