optimizacion de consulta de post con direcciones y mejorar etilos de promociones en perfil de socios

--- a/app/css/custom.css
+++ b/app/css/custom.css
@@ -475,7 +475,7 @@ a.searchDay {
 #main .ui-content {
   padding: 0;
 }
-#postContainer button {
+#postContainer button,#PromocionesPorSocio button {
   outline: none !important;
   border: none;
   background: transparent;
