subir imagen de perfil

--- a/control/css/custom.css
+++ b/control/css/custom.css
@@ -4001,8 +4001,10 @@ ul.notifications {
 .input-group-btn .btn {
     min-height: 40px !important;
 }
-
-
+/*.file-footer-caption {
+    display: none !important;
+}
+*/
 
 
 
