--- a/control/css/custom.css
+++ b/control/css/custom.css
@@ -4001,10 +4001,9 @@ ul.notifications {
 .input-group-btn .btn {
     min-height: 40px !important;
 }
-/*.file-footer-caption {
+.file-hidden{
     display: none !important;
 }
-*/
 
 
 
