--- a/control/css/helpers.css
+++ b/control/css/helpers.css
@@ -1222,3 +1222,44 @@ font-size: 15px;
 .fixed {
   position: fixed;
 }
+
+
+/*styles angel*/
+  .swal-xl{
+    width: 80%!important;
+  }
+    .swal-m{
+    width: 50%!important;
+  }
+   #editProfileD .form-section{
+    width: 50%;
+    display: inline-block;
+  }
+.fa-pencil-square-o{
+  font-size: x-large;
+  color: blue;
+  cursor: pointer;
+
+}
+.fa-pencil-square-o:hover{
+  font-size: xx-large;
+  color: #6706e2;
+}
+.fa-times{
+    font-size: x-large;
+  color: red;
+  float: right;
+  cursor: pointer;
+}
+.fa-times:hover{
+  font-size: xx-large;
+  color: #e62b89;
+}
+#tableDir thead tr td{text-align: center;}
+#tableDir tbody tr td{text-align: center;}
+.btnPlus{
+      float: left!important;
+    padding: 3px 6px;
+    font-size: large;
+}
+/*/styles nagel*/
