--- a/control/css/custom.css
+++ b/control/css/custom.css
@@ -4031,3 +4031,21 @@ margin-top: -9px;
     max-width: 100vw;
     width: 450px;
 }
+.eliminar-item {
+    position: absolute;
+    bottom: 5px;
+    left: 5px;
+    color: white;
+    background: red;
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    box-sizing: border-box;
+    line-height: 182%;
+    font-size: 2em;
+    border-radius: 50%;
+    box-shadow: 0px 3px 11px rgb(0, 0, 0);
+    cursor: pointer;
+}
+
+.eliminar-item:hover:before {content: 'Eliminar';position: absolute;top: -8px;background: #000;z-index: 99;left: 80%;border-radius: 5px;font-size: 12px;line-height: 133%;padding: 4px 5px;}
